APIs/googleapis.com/adexchangebuyer/v1.3/javascript-client/docs/CreativeNativeAd.md
# AdExchangeBuyerApi.CreativeNativeAd

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**advertiser** | **String** |  | [optional] 
**appIcon** | [**CreativeNativeAdAppIcon**](CreativeNativeAdAppIcon.md) |  | [optional] 
**body** | **String** | A long description of the ad. | [optional] 
**callToAction** | **String** | A label for the button that the user is supposed to click. | [optional] 
**clickTrackingUrl** | **String** | The URL to use for click tracking. | [optional] 
**headline** | **String** | A short title for the ad. | [optional] 
**image** | [**CreativeNativeAdImage**](CreativeNativeAdImage.md) |  | [optional] 
**impressionTrackingUrl** | **[String]** | The URLs are called when the impression is rendered. | [optional] 
**logo** | [**CreativeNativeAdLogo**](CreativeNativeAdLogo.md) |  | [optional] 
**price** | **String** | The price of the promoted app including the currency info. | [optional] 
**starRating** | **Number** | The app rating in the app store. Must be in the range [0-5]. | [optional] 


